--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,11 +18,11 @@ Imports: shiny, shinyjs, shinydashboard, shinydashboardPlus,
         data.table, ggplot2, ggpubr, ggpmisc, DT, dplyr, Biostrings,
         igraph, tidyverse, visNetwork, stringr, clusterProfiler,
         enrichplot, plotly, wordcloud2, fresh
-biocViews:
-Imports: BiocManager, Gviz, ChIPseeker,
+biocViews: BiocManager, Gviz, ChIPseeker,
         TxDb.Hsapiens.UCSC.hg38.knownGene,
         TxDb.Mmusculus.UCSC.mm10.knownGene, org.Hs.eg.db, org.Mm.eg.db,
         BSgenome.Hsapiens.UCSC.hg38,
         BSgenome.Mmusculus.UCSC.mm10, TFBSTools,
         motifmatchr
 Suggests: testthat
+URL: https://aicplane.github.io/Linkage/
