--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,16 @@
 exportPattern("^[[:alpha:]]+")
 export(Linkage)
-export(Install.biocViews)
+export(GO.enrichment)
+export(KEGG.enrichment)
+export(dotplot)
+export(upsetplot)
+export(cnetplot)
+export(barplot)
+export(wordcloud)
+export(motif_analysis)
+export(seqLogo_plot)
+export(Peak_Annottation)
+export(vennpie)
+export(trackplot)
+export(box_plot)
+export(regulatory_peak)
