--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-02-05T11:47Z
+last_built: 2024-02-05T12:29Z
+urls:
+  reference: https://aicplane.github.io/Linkage/reference
+  article: https://aicplane.github.io/Linkage/articles
 
