--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,6 +4,7 @@ template:
   bootswatch: flatly
   bslib:
     pkgdown-nav-height: 100px
+    pkgdown-navbar-height: 20px
 navbar:
   title: "Linkage"
   type: slim
