--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -70,6 +70,23 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
+=======
+biocViews: 
+    ChIPseeker,
+    Gviz,
+    TxDb.Hsapiens.UCSC.hg38.knownGene,
+    TxDb.Mmusculus.UCSC.mm10.knownGene, 
+    org.Hs.eg.db, 
+    org.Mm.eg.db,
+    BSgenome.Hsapiens.UCSC.hg38,
+    BSgenome.Mmusculus.UCSC.mm10, 
+    TFBSTools,
+    motifmatchr,
+    GenomeInfoDb,
+    GenomicRanges,
+    IRanges
+Remotes:
+    aicplane/LinkageData
 URL: https://aicplane.github.io/Linkage-tutorial/
 LazyData: true
 VignetteBuilder: knitr
