--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: Linkage
+Package: linkage
 Type: Package
 Title: An R shiny web server for linking of ATAC-seq to gene expression data
 Version: 1.2.0
@@ -8,7 +8,7 @@ Authors@R:
          role = c("aut", "cre"),
          comment = c(ORCID = "0009-0003-5676-4237"),
          email = "2470587020@qq.com")
-Maintainer: <2470587020@qq.com>
+Maintainer: Zenghui Liu<2470587020@qq.com>
 Description: Linkage is a user-friendly, interactive, open-source R-Shiny web application for exploring and visualizing potential gene cis-regulatory elements (CREs) based on ATAC-seq and RNA-seq data. Users can upload customized data or re-analysis public datasets, then obtain genome-wide CREs with simple clicks. All the CREs are predicted from multi-omics sequencing data, rather than being experimentally determined. The main feature for Linkage is to identify potential CREs for the whole genome by performing canonical correlation analysis between each quantitative chromatin accessibility measure and the quantitative expression level across all samples. Additional modules are developed to allow users to perform more systematic and deeper analysis for the gene regulatory landscape.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -38,9 +38,22 @@ Imports:
     BiocManager,   
     ggplotify,
     tibble,
-    wordcloud
-Suggests:
+    wordcloud,
+    IRanges,
+    Gviz,
+    TxDb.Hsapiens.UCSC.hg38.knownGene,
+    TxDb.Mmusculus.UCSC.mm10.knownGene, 
+    org.Hs.eg.db, 
+    org.Mm.eg.db,
+    BSgenome.Hsapiens.UCSC.hg38,
+    BSgenome.Mmusculus.UCSC.mm10, 
+    TFBSTools,
+    motifmatchr,
+    GenomeInfoDb,
+    GenomicRanges,
     ChIPseeker,
+    LinkageData
+Suggests:
     shiny,
     shinyjs,
     shinydashboard,
@@ -55,21 +68,7 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
-biocViews:
-    IRanges,
-    Gviz,
-    TxDb.Hsapiens.UCSC.hg38.knownGene,
-    TxDb.Mmusculus.UCSC.mm10.knownGene, 
-    org.Hs.eg.db, 
-    org.Mm.eg.db,
-    BSgenome.Hsapiens.UCSC.hg38,
-    BSgenome.Mmusculus.UCSC.mm10, 
-    TFBSTools,
-    motifmatchr,
-    GenomeInfoDb,
-    GenomicRanges
-Remotes:
-    aicplane/LinkageData
+Depends: R (>= 4.3)
 URL: https://aicplane.github.io/Linkage-tutorial/
 LazyData: true
 VignetteBuilder: knitr
