--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,6 @@ Imports:
     GenomicRanges,
     ChIPseeker
 Suggests:
-    LinkageData,
     shiny,
     shinyjs,
     shinydashboard,
@@ -68,6 +67,8 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
+Remotes:
+    aicplane/LinkageData
 Depends: R (>= 4.3)
 URL: https://aicplane.github.io/Linkage-tutorial/
 LazyData: true
