--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,6 +6,6 @@ articles:
   GRN-tutorial: GRN-tutorial.html
   Install: Install.html
   Linkage: Linkage.html
-  TCGA-BRCA guided tutorial: TCGA-BRCA guided tutorial.html
-last_built: 2024-05-16T07:14Z
+  TCGA-BRCA-guided-tutorial: TCGA-BRCA-guided-tutorial.html
+last_built: 2024-06-11T06:48Z
 
